Fix youtube video not showing full height

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,4 +13,11 @@
 	#main {
 		margin-bottom: 30px;
 	}
+
+	@media (min-width: 1025px) {
+
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
 }
