--- a/src/MealDisplay.scss
+++ b/src/MealDisplay.scss
@@ -23,9 +23,24 @@
             line-height: 200%;
         }
     }
+
+    .youtube-container {
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 */
+        padding-top: 25px;
+        height: 0;
+
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) {
   
     .meal-container {
         
@@ -38,14 +53,6 @@
                 img {
                     width: 300px;
                 }
-            
-                // ul {
-    
-            
-                //     .meal-ingredient {
-    
-                //     }
-                // }
             }
         
             .right-column {
@@ -53,9 +60,24 @@
             }
         }
     }
-}
 
-@media (min-width: 1025px) {
 
+    @media (min-width: 1025px) {
+
+        .meal-container {
+            width: 900px;
+
+            .columns {
     
+                .left-column {
+                    
+                    img {
+                        width: 380px;
+                    }
+                
+                }
+            }
+        }
+        
+    }
 }
